deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb-ingress-class
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  labels:
    app: cafe
  annotations:
    alb.ingress.kubernetes.io/group.name: faucet-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:108533296571:certificate/cc522bc2-9ca1-4352-93f1-def1d5473b2a
spec:
  ingressClassName: 'alb-ingress-class'
  rules:
    - host: coffee.caliber.build
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffee
                port:
                  number: 80
    - host: tea.caliber.build
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tea
                port:
                  number: 80
    - host: cafe.caliber.build
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cafe
                port:
                  number: 80
